# pb-java

./: .gitignore  .mypy.ini  .mypyc.sh  .python-version  .pytype.cfg  .test-flatbuffers.sh  README.md  build.gradle  pyproject.toml
.stubs/conversationstream/protobuf/: api_pb2.py  api_pb2.pyi
.stubs/flatbuffers/: __init__.pyi  builder.pyi  compat.pyi  encode.pyi  flexbuffers.pyi  number_types.pyi  packer.pyi  table.pyi  util.pyi
src/: .gitignore
src/main/flatbuffers/: cstream.fbs  test.fbs
src/main/go/: .gitignore  go.mod  msg_pack.go
src/main/java/MyGame/Sample/: ChecklistItem.java  ComponentType.java  ConversationItem.java  ConversationStreamMessage.java  ConversationTranscript.java  GoalItem.java  MemoryField.java  MemoryModel.java  PhaseConnection.java  PhaseInformation.java  PhaseNode.java  SentimentAnalysis.java  UserModel.java
src/main/java/claude/: AnthropicClient.java
src/main/java/sco3/: TestFb.java  TestPb.java
src/main/java/sco3fb/: Hello.java
src/main/js/: TestPb.js  api_pb.js  package-lock.json  package.json  test_pb.js  test_pbjs.js
src/main/js/flat/: config.json  flat.py
src/main/js/pb/: TestPb.js
src/main/js/pbjs/: TestPb.js  package-lock.json  package.json
src/main/proto/: api.proto  test.proto
src/main/python/: TestFb.py  TestPb.py
src/main/python/MyGame/Sample/: ChecklistItem.py  ComponentType.py  ConversationItem.py  ConversationStreamMessage.py  ConversationTranscript.py  GoalItem.py  MemoryField.py  MemoryModel.py  PhaseConnection.py  PhaseInformation.py  PhaseNode.py  SentimentAnalysis.py  UserModel.py
src/main/python/bedrock/: anthropic_bedrock.py  locustfile.py
src/main/python/enumsc/: test.py
src/main/python/msg_pack/: .gitignore  msg_pack_conversation_stream.py  test_msg_pack.py  test_msg_pack_main.py
src/main/python/sco3/: TestPb.py
src/main/python/sco3fb/: Hello.py
src/test/java/msgpack/: TestMsgPack.java
src/test/python/cstream/: test_conversation_stream.py  test_conversation_stream_fb.py  test_conversation_stream_mp.py  test_conversation_stream_msg_pack.py  test_conversation_stream_msg_pack_array.py  test_conversation_stream_msg_pack_custom.py  test_conversation_stream_pb.py  tst_conversation_stream_pb.py
