[tool.poetry]
name = "pb-java"
version = "0.1.0"
description = ""
authors = []

packages = [
    { include = "sco3", from = "src/main/python"  }
]


[tool.poetry.dependencies]
python = "^3.11"
flatbuffers = "^23.5.26"
black = "^24.4.2"
protobuf = "^5.27.3"
mypy-protobuf = "^3.6.0"
mypy = "^1.11.1"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
