[project]
name = "pb-java"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.11"

dependencies = [
    "msgpack>=1.0.8",
    "msgpack-types>=0.3.0",
    "protobuf>=5.27.4",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "mypy>=1.11.2",
    "pyre>=1.12.5",
    "pylint>=3.2.6",
    "pytest>=8.3.2",
    "mypy-protobuf>=3.6.0",
]

[tool.pytype]
inputs = ['sco3','build/generated/source/proto/main/python']



